# product_fa

./: .env  .pylintrc  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
app/: main.py
app/api/api_v1/: product.py
app/controller/: product.py
app/db/: base.py  session.py
app/models/: product.py
app/schemas/: product.py
test/: product.py
